[gd_scene load_steps=3 format=2]

[ext_resource path="res://Ponderada.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]

[node name="Node2D" type="Node2D"]
position = Vector2( 319, 143 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="."]
margin_left = 6.0
margin_top = 4.0
margin_right = 137.0
margin_bottom = 60.0
text = "Salvar"

[node name="Button2" type="Button" parent="."]
margin_left = 6.0
margin_top = 77.0
margin_right = 137.0
margin_bottom = 133.0
text = "Mostrar"

[node name="Button3" type="Button" parent="."]
margin_left = 6.0
margin_top = 152.0
margin_right = 137.0
margin_bottom = 208.0
text = "Baldo(?)"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 360.0
margin_top = -1.0
margin_right = 458.0
margin_bottom = 62.0
text = "NÃºmero"
align = 1

[node name="LineEdit2" type="LineEdit" parent="."]
margin_left = 153.0
margin_top = -1.0
margin_right = 251.0
margin_bottom = 62.0
text = "Nome"
align = 1

[node name="Label" type="Label" parent="."]
margin_left = 153.0
margin_top = 76.0
margin_right = 461.0
margin_bottom = 130.0
custom_styles/normal = SubResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 153.0
margin_top = 152.0
margin_right = 461.0
margin_bottom = 206.0
custom_styles/normal = SubResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
[connection signal="text_changed" from="LineEdit2" to="." method="_on_LineEdit2_text_changed"]
